# meeple-0

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
meeple/: cli.py  constant.py
meeple/utils/: __init__.py  add_user.py  fetch_meeple.py  get_meeple_version.py  initialize_meeple.py  meeple.py  profile.py
tests/: test_meeple.py
