[tool.poetry]
name = "meeple"
version = "0.1.0"
description = ""
authors = ["Bolaji Olajide <cooproton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
mypy = "^0.761"
flake8 = "^3.7.9"

[tool.poetry.scripts]
meeple = "meeple:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
